--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
+    "@vercel/node": "^3.0.21",
     "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^9.14.0",
     "prisma": "^5.22.0",
