--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,20 @@
 {
-  "regions": ["fra1"]
+  "regions": ["fra1"],
+  "builds": [
+    {
+      "src": "src/server.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/src/server.ts"
+    }
+  ],
+  "functions": {
+    "src/server.ts": {
+      "maxDuration": 30
+    }
+  }
 }
