Fix: Add proper routing for API endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,15 @@
     "api/index.ts": {
       "maxDuration": 30
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api"
+    }
+  ]
 }
